--- a/Unit1_Create_With_Code/01_audio_db/templates/results.html
+++ b/Unit1_Create_With_Code/01_audio_db/templates/results.html
@@ -5,22 +5,8 @@
   </head>
   <body>
     <h1>Albums for {{ artist }}</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Album Name</th>
-          <th>Release Year</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for album in albums %}
-        <tr>
-          <td>{{ album.strAlbum }}</td>
-          <td>{{ album.intYearReleased }}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    <a href="/">Search another artist</a>
+    {% for album in albums %}
+    {{ album.strAlbum }}
+    {% endfor %}
   </body>
 </html>
